nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__numbered_scrolling_and_blank_rows@short.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: short
  name_expression: "\"short\""
  sequence: 11
---
version: 1
size:
  cols: 26
  rows: 8
screen: alternate
cursor:
  position:
    x: 2
    y: 7
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "             ╭───────────╮"
  - "             │1 short    │"
  - "             │2          │"
  - "  empty      │3 last     │"
  - ▌ short      │           │
  - "  long       │           │"
  - "  3/3 ───────│           │"
  - ">            ╰───────────╯"
styles:
  - row: 1
    start: 14
    end: 16
    background: "#666666"
  - row: 2
    start: 14
    end: 16
    background: "#666666"
  - row: 3
    start: 14
    end: 16
    background: "#666666"
  - row: 4
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 4
    start: 1
    end: 7
    background: "#666666"
    bold: true
  - row: 6
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 6
    start: 5
    end: 13
    foreground: "#c5c8c6"
    italic: true
