nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__pending_previews@pending.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: pending
  name_expression: "\"pending\""
  sequence: 5
---
version: 1
size:
  cols: 30
  rows: 6
screen: alternate
cursor:
  position:
    x: 2
    y: 5
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "               ╭─────────────╮"
  - "               │Loading...   │"
  - ▌ deferred     │             │
  - "  ready        │             │"
  - "  2/2 ─────────│             │"
  - ">              ╰─────────────╯"
styles:
  - row: 1
    start: 16
    end: 26
    foreground: "#666666"
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 10
    background: "#666666"
    bold: true
  - row: 4
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 4
    start: 5
    end: 15
    foreground: "#c5c8c6"
    italic: true
