nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__style_resets_and_custom_elision@custom-marker.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: custom-marker
  name_expression: "\"custom-marker\""
  sequence: 3
---
version: 1
size:
  cols: 10
  rows: 6
screen: alternate
cursor:
  position:
    x: 2
    y: 5
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "     ╭───╮"
  - "     │AB~│"
  - "     │ab~│"
  - ▌ it~│   │
  - "  1/1│   │"
  - ">    ╰───╯"
styles:
  - row: 1
    start: 6
    end: 8
    foreground: "#b9ca4a"
    background: "#7aa6da"
    bold: true
  - row: 3
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 3
    start: 1
    end: 5
    background: "#666666"
    bold: true
  - row: 4
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
