nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__style_resets_and_custom_elision@styles.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: styles
  name_expression: "\"styles\""
  sequence: 1
---
version: 1
size:
  cols: 16
  rows: 6
screen: alternate
cursor:
  position:
    x: 2
    y: 5
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "        ╭──────╮"
  - "        │ABCDEF│"
  - "        │abcdef│"
  - ▌ item  │      │
  - "  1/1 ──│      │"
  - ">       ╰──────╯"
styles:
  - row: 1
    start: 9
    end: 11
    foreground: "#b9ca4a"
    background: "#7aa6da"
    bold: true
  - row: 1
    start: 12
    end: 13
    underline_color: "#d54e53"
  - row: 1
    start: 13
    end: 14
    underline: single
  - row: 3
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 3
    start: 1
    end: 6
    background: "#666666"
    bold: true
  - row: 4
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 4
    start: 5
    end: 8
    foreground: "#c5c8c6"
    italic: true
