nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__toggle_line_numbers@scrolled.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: scrolled
  name_expression: "\"scrolled\""
  sequence: 5
---
version: 1
size:
  cols: 32
  rows: 5
screen: alternate
cursor:
  position:
    x: 2
    y: 4
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "                ╭──────────────╮"
  - "                │gamma         │"
  - ▌ item          │delta         │
  - "  1/1 ──────────│epsilon       │"
  - ">               ╰──────────────╯"
styles:
  - row: 1
    start: 17
    end: 22
    foreground: "#b9ca4a"
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 6
    background: "#666666"
    bold: true
  - row: 2
    start: 17
    end: 22
    foreground: "#b9ca4a"
  - row: 3
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 3
    start: 5
    end: 16
    foreground: "#c5c8c6"
    italic: true
  - row: 3
    start: 17
    end: 24
    foreground: "#b9ca4a"
