nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__toggle_preview@hidden.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
assertion_line: 390
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: hidden
  name_expression: "\"hidden\""
  sequence: 3
---
version: 1
size:
  cols: 30
  rows: 5
screen: alternate
cursor:
  position:
    x: 2
    y: 4
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "                              "
  - "                              "
  - "▌ a rather long item name     "
  - "  1/1 ────────────────────────"
  - ">                             "
styles:
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 25
    background: "#666666"
    bold: true
  - row: 3
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 3
    start: 5
    end: 30
    foreground: "#c5c8c6"
    italic: true
